@@ -192,6 +192,9 @@ A:link, A:visited, A:active { text-decoration: underline }
     <td width="100">
     <a href="http://www.gnome.org/"><img src="smallfootonly.gif" alt="Gnome Logo"/></a>
     <a href="http://www.redhat.com"><img src="redhat.gif" alt="Red Hat Logo"/></a>
+    <div align="left">
+    <a href="http://xmlsoft.org/XSLT/"><img src="Libxslt-Logo-180x168.gif" alt="Made with Libxslt Logo"/></a>
+    </div>
     </td>
     <td>
     <table border="0" width="90%" cellpadding="2" cellspacing="0" align="center" bgcolor="#000000">
