@@ -34,6 +34,8 @@ reused in commercial applications (see the <a href="intro.html">intro</a>)</p>
 
 <p></p>
 
+<p>Logo designed by <a href="mailto:liyanage@access.ch">Marc Liyanage</a>.</p>
+
 <h2><a name="Introducti">Introduction</a></h2>
 
 <p>This document describes <a href="http://xmlsoft.org/XSLT/">libxslt</a>,
