@@ -1,3 +1,10 @@
+Wed Aug 28 13:44:54 CEST 2002 Daniel Veillard <daniel@veillard.com>
+
+	* doc/Libxslt-Logo-180x168.gif doc/Libxslt-Logo-90x34.gif:
+	  nice logos generated by Marc Liyanage
+	* doc/site.xsl *.html: changed the stylesheet to show the new
+	  logo and regenerated the pages
+
 Sun Aug 25 17:01:40 CEST 2002 Daniel Veillard <daniel@veillard.com>
 
 	* python/libxslt-python-api.xml python/libxslt.c
